--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,8 @@ a:hover {
   font-weight: 600;
   color: #1e1e1e;
   font-size: 1.1rem;
+  margin-left: 2px;
+  margin-top: 5px;
 }
 
 /*--/ Title A /--*/
